# maui-cinema

./: .gitignore  CMakeLists.txt  Messages.sh  cinema.pro  cinema_en_001.ts
android_files/: AndroidManifest.xml
src/: Messages.sh  main.cpp  main.qml  org.maui.cinema.desktop  org.maui.clip.desktop  qml.qrc
src/models/: playlistmodel.cpp  playlistmodel.h  tagsmodel.cpp  tagsmodel.h  videosmodel.cpp  videosmodel.h
src/utils/: cinema.cpp  cinema.h  clip.cpp  clip.h  fileloader.h  thumbnailer.cpp
src/views/: BrowserLayout.qml  CollageDelegate.qml  ItemMenu.qml  ListDelegate.qml  SelectionBar.qml
src/views/collection/: CollectionView.qml
src/views/player/: Player.qml  PlayerView.qml  Playlist.qml
src/views/tags/: TagsGrid.qml  TagsView.qml
